Use uuid for models

--- a/app/views/permits/index.html.erb
+++ b/app/views/permits/index.html.erb
@@ -1,3 +1,5 @@
 <h1>Updated world</h1>
 
-<%= @permits.map(&:title) %>
+<%= @permits.map(&:name) %>
+<%= @permits.map(&:agency) %>
+<%= @permits.map(&:deadline) %>
