--- a/app/views/permit_submissions/new.html.erb
+++ b/app/views/permit_submissions/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New Permit</h1>
 
-<%= form_with(url: "/permits", method: "post") do %>
+<%= form_with(url: permit_submissions_path, method: "post") do |f| %>
   <%= label_tag(:name, "Name") %>
   <%= text_field(:permit, :name) %>
   <%= label_tag(:name, "Agency") %>
@@ -9,5 +9,10 @@
   <%= select(:permit, :status, [["accepted", "accepted"], ["denied", "denied"], ["filed", "filed"]]) %>
   <%= label_tag(:name, "Deadline") %>
   <%= date_field(:permit, :deadline) %>
+  <%= f.fields_for :permit_documents do |document_form| %>
+      <%= document_form.label :document %>
+      <%= document_form.file_field :document %>
+  <% end %>
+
   <%= submit_tag("Create") %>
 <% end %>
