--- a/app/views/permit_submissions/show.html.erb
+++ b/app/views/permit_submissions/show.html.erb
@@ -7,3 +7,4 @@ Documents:
 <% @permit.permit_documents.map(&:document).map do |document| %>
   <%= image_tag url_for(document) %>
 <% end %>
+<%= link_to 'Back to all permits', permits_path, class: "block p-5" %>
