--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,5 +11,45 @@
  * It is generally better to create a new file per style scope.
  *
  *= require_tree .
+ *= require navigation
+ *= require dropdown
  *= require_self
  */
+
+body {
+	margin: 0;
+	background-color: #EBE9E5;
+}
+
+h1 {
+	margin: 0;
+}
+
+.x-bg-blue {
+	background-color: #09347A;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 5fr;
+  grid-row-gap: 1em;
+}
+
+.Main {
+	background: #FFFFFF;
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+	border-radius: 8px;
+	padding: 1rem;	
+}
+
+header, footer {
+  grid-column: 1 / 6;
+}
+
+@media all and (max-width: 700px) {
+  aside,
+  article {
+    grid-column: 1 / 6;
+  }
+}
+
