--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,11 +9,50 @@
   </head>
 
   <body>
-    <% if current_user.present? %>
-      <h3> Hello <%= current_user.email %></h3>
+<div class="grid">
+  <header class="flex justify-between x-bg-blue h-16">
+    <%= image_tag('logo.png', class: 'h-full') %>
+    <nav role="navigation">
+      <ul class="Navigation">
+        <li class="Navigation-item">
+          <a href="#">One</a>
+        </li>
+        <li class="Navigation-item Dropdown" aria-haspopup="true" aria-expanded="false">
+          <div class="Avatar"><div class="Avatar-image"></div></div>
+          <ul class="Dropdown-list">
+            <li class="Dropdown-listItem"><a href="/logout">Logout</a></li>
+            <li class="Dropdown-listItem"><a href="/logout">Logout</a></li>
+          </ul>
+        </li>
+      </ul>
+    </nav>
+
+  </header>
+
+  <aside class="Sidebar">
+    <div class="Dropdown x-bg-blue h-8">
+      <h3>Dashboard</h3>
+      <ul class="Dropdown-list">
+        <li class="Dropdown-listItem"><%= link_to "Permits", permits_path(sort_by: 'name') %></li>
+        <li class="Dropdown-listItem"><%= link_to "Something Else", permits_path(sort_by: 'name') %></li>
+      </ul>
+    </div>
+  </aside>
+
+  <article class="pr-2">
+    <% if flash.present? %>
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
     <% end %>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-    <%= yield %>
+
+    <div class="Main">
+      <%= yield %>
+    </div>
+  </article>
+
+  <footer>
+    Footer
+  </footer>
+</div>
   </body>
 </html>
