--- a/app/views/permit_submissions/index.html.erb
+++ b/app/views/permit_submissions/index.html.erb
@@ -1,12 +1,24 @@
 <h1>Permits</h1>
 
-<div class="inline-block p-5">Name</div><%= link_to "Sort", permits_path(sort_by: 'name') %>
-<div class="inline-block p-5">Agency</div><%= link_to "Sort", permits_path(sort_by: 'agency') %>
-<div class="inline-block p-5">Deadline</div><%= link_to "Sort", permits_path(sort_by: 'deadline') %>
-<% @permits.map do |permit| %>
-  <div class="py-1">
-    <%= render 'shared/permit_row', permit: permit %>
-    <%= link_to 'Show documents', permit_submission_path(id: permit.id) %>
-  </div>
-<% end %>
-<a href="/permits/new">New Permit</a>
+<div class="blue-button h-10">Search</div>
+<div class="blue-button h-10">
+	<a  href="/permits/new">New Permit</a>
+</div>
+
+<div class="Table">
+	<div class="Table-header">
+		<div class="inline-block p-5">Name</div><%= link_to "Sort", permits_path(sort_by: 'name') %>
+		<div class="inline-block p-5">Agency</div><%= link_to "Sort", permits_path(sort_by: 'agency') %>
+		<div class="inline-block p-5">Deadline</div><%= link_to "Sort", permits_path(sort_by: 'deadline') %>
+	</div>
+	<div class="Table-body">
+		<% @permits.map do |permit| %>
+		  <div class="py-1">
+		  	<div class="Table-row">
+		    	<%= render 'shared/permit_row', permit: permit %>
+		    	<%= link_to 'Show documents', permit_submission_path(id: permit.id) %>
+		  	</div>
+		  </div>
+		<% end %>
+	</div>
+</div>
