--- a/app/views/shared/_permit_row.html.erb
+++ b/app/views/shared/_permit_row.html.erb
@@ -1,3 +1,4 @@
-<div class="inline-block p-5"><%= permit.name %></div>
-<div class="inline-block p-5"><%= permit.agency %></div>
-<div class="inline-block p-5"><%= permit.deadline %></div>
+<div class="Table-cell"><%= permit.name %></div>
+<div class="Table-cell"><%= permit.agency %></div>
+<div class="Table-cell"><%= permit.permit_type.name %></div>
+<div class="Table-cell"><%= permit.deadline.to_date %></div>
