--- a/app/assets/stylesheets/table.scss
+++ b/app/assets/stylesheets/table.scss
@@ -12,5 +12,15 @@
 	}		
 	.Table-row {
 		background: rgba(229, 229, 229, 0.27);
+	}
+
+	.Table-row, .Table-header {
+		display: grid;
+		grid-template-columns: repeat(5, 1fr);
 	}	
+
+	.Table-cell {
+		border: 1px solid #ECEEF3;
+		padding: 1rem 2rem;
+	}
 }
