--- a/app/assets/stylesheets/utils.scss
+++ b/app/assets/stylesheets/utils.scss
@@ -7,4 +7,10 @@
 	display: inline-block;
 	padding: 0 20px;
 	border-radius: 4px;
+	color: white;
+	border: none;
+	a {
+		text-decoration: none;
+		color: white;
+	}
 }
