Update permit table css

--- a/app/assets/stylesheets/table.scss
+++ b/app/assets/stylesheets/table.scss
@@ -1,17 +1,40 @@
 .Table {
+  border-radius: 12px;
+  overflow: hidden;
+  filter: drop-shadow(0 4px 4px darken(#f1f2f6, 20%));
+
 	.Table-header {
-		background: #0A502B;
-		border: 1px solid #ECEEF3;
+		background: #0F4F2C;
 		box-sizing: border-box;
-		border-radius: 12px 12px 0px 0px;
+    color: white;
+    text-transform: uppercase;
+
+    a {
+      color: white;
+    }
 	}
+
 	.Table-body {
 		border: 1px solid #ECEEF3;
 		box-sizing: border-box;
 		border-radius: 0px 0px 12px 12px;
+
+    .Table-cell {
+      color: darken(#9ea7b1, 20%);
+    }
+
+    a {
+      color: #1e8dfb;
+    }
 	}		
+
 	.Table-row {
-		background: rgba(229, 229, 229, 0.27);
+		background: #f8f8f8;
+    border-top: 1px solid #f1f2f6;
+    border-bottom: 1px solid #f1f2f6;
+    &:nth-child(2n) {
+      background: white;
+    }
 	}
 
 	.Table-row, .Table-header {
@@ -20,7 +43,7 @@
 	}	
 
 	.Table-cell {
-		border: 1px solid #ECEEF3;
 		padding: 1rem 2rem;
+    text-align: center;
 	}
 }
