--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -52,12 +52,19 @@ h1 {
 	background: #FFFFFF;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 	border-radius: 8px;
-	padding: 1rem;	
+	padding: 1rem;
 }
 
 header, footer {
   grid-column: 1 / 6;
 }
 
-
-
+.grid_table {
+  float: left;
+  padding: 10px;
+}
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
