--- a/app/assets/stylesheets/table.scss
+++ b/app/assets/stylesheets/table.scss
@@ -26,7 +26,7 @@
     a {
       color: #1e8dfb;
     }
-	}		
+	}
 
 	.Table-row {
 		background: #f8f8f8;
@@ -40,10 +40,13 @@
 	.Table-row, .Table-header {
 		display: grid;
 		grid-template-columns: repeat(5, 1fr);
-	}	
+	}
 
 	.Table-cell {
 		padding: 1rem 2rem;
     text-align: center;
 	}
+}
+.top-tasks{
+  width: 875px;
 }
