--- a/app/assets/stylesheets/alerts.scss
+++ b/app/assets/stylesheets/alerts.scss
@@ -9,7 +9,7 @@
   border-radius: 5px;
   border-top: 5px solid #020071;
   box-shadow: 0px 5px 7px grey;
-  height: 95px;
+  height: auto;
 }
 .more-info-div{
   padding: 2px;
