--- a/app/assets/stylesheets/alerts.scss
+++ b/app/assets/stylesheets/alerts.scss
@@ -10,6 +10,7 @@
   border-top: 5px solid #020071;
   box-shadow: 0px 5px 7px grey;
   height: auto;
+  margin-left: 57px;
 }
 .more-info-div{
   padding: 2px;
