--- a/app/views/permit_submissions/index.html.erb
+++ b/app/views/permit_submissions/index.html.erb
@@ -26,7 +26,7 @@
 		<% end %>
 	</div>
 </div>
-<div class="row">
+<div class="row flex_box">
 	<div class="Table mt-4 grid_table">
 		<div class="Table-header top-tasks">
 			<div class="Table-cell"><%= link_to "Top Tasks" %></div>
