--- a/app/views/permit_submissions/new.html.erb
+++ b/app/views/permit_submissions/new.html.erb
@@ -1,14 +1,16 @@
 <h1>New Permit</h1>
 
-<%= form_with(url: permit_submissions_path, method: "post") do |f| %>
-  <%= label_tag(:name, "Name") %>
-  <%= text_field(:permit, :name) %>
-  <%= label_tag(:name, "Agency") %>
-  <%= text_field(:permit, :agency) %>
-  <%= label_tag(:name, "Status") %>
-  <%= select(:permit, :status, [["accepted", "accepted"], ["denied", "denied"], ["filed", "filed"]]) %>
-  <%= label_tag(:name, "Deadline") %>
-  <%= date_field(:permit, :deadline) %>
+<%= form_with model: @permit, method: "post" do |f| %>
+  <%= f.label "Name" %>
+  <%= f.text_field :name %>
+  <%= f.label "Type" %>
+  <%= f.select :permit_type_id, PermitType.all.collect{|t| [t.name, t.id]} %>
+  <%= f.label "Agency" %>
+  <%= f.text_field :agency %>
+  <%= f.label "Status" %>
+  <%= f.select :status, [["accepted", "accepted"], ["denied", "denied"], ["filed", "filed"]] %>
+  <%= f.label "Deadline" %>
+  <%= f.date_field :deadline %>
   <%= f.fields_for :permit_documents do |document_form| %>
       <%= document_form.label :document %>
       <%= document_form.file_field :document %>
