--- a/app/assets/stylesheets/utils.scss
+++ b/app/assets/stylesheets/utils.scss
@@ -2,6 +2,17 @@
 	background-color: #09347A;
 }
 
+.delete-button{
+	background: #D60000;
+	display: inline-block;
+	padding: 0.5rem 1rem;
+	border-radius: 4px;
+	color: white;
+	text-decoration: none;
+	font-family: Arial;
+	font-size: 13.3333px;
+}
+
 .blue-button,
 .knockout-button,
 input[type="submit"] {
