--- a/app/views/permit_submissions/edit.html.erb
+++ b/app/views/permit_submissions/edit.html.erb
@@ -1,18 +1,51 @@
-<h1>Edit Permit</h1>
-
-<%= form_with model: @permit do |f| %>
-  <%= f.label "Name" %>
-  <%= f.text_field :name %>
-  <%= f.label "Agency" %>
-  <%= f.text_field :agency %>
-  <%= f.label "Status" %>
-  <%= f.select :status, [["accepted", "accepted"], ["denied", "denied"], ["filed", "filed"]] %>
-  <%= f.label "Deadline" %>
-  <%= f.date_field :deadline %>
-  <%= f.fields_for :permit_documents do |document_form| %>
-      <%= document_form.label :document %>
-      <%= document_form.file_field :document %>
-  <% end %>
-
-  <%= f.submit 'Update' %>
-<% end %>
+<div class="table">
+  <div class="flex-row">
+    <div class="flex-col">
+      <h1>Edit Permit</h1>
+      <div class="inline-block">
+        <%= link_to 'Delete', '#modal', class: "delete-button mt-2 mb-2" %>
+      </div>
+    </div>
+  </div>
+  <div id="modal" class="overlay">
+  	<div class="popup">
+  		<h2>Delete Permit</h2>
+  		<a class="close" href="#">&times;</a>
+  		<div class="content">
+        <div class="flex mb-1"
+  			   <p>Are you sure you'd like to delete this permit?</p>
+        </div>
+        <div class="flex mb-1"
+          <%= button_to 'Yes', {controller: :permit_submissions, :action => 'destroy', :permit_id => @permit.id }, {method: :delete, class: "delete-button"} %>
+          <%= link_to 'No', '#', class: "blue-button text-xs font-sans ml-1" %>
+        </div>
+  		</div>
+  	</div>
+  </div>
+  <div class="flex-row">
+    <div class="grid grid-cols-4">
+      <%= form_with model: @permit do |f| %>
+        <%= f.label "Name" %>
+        <%= f.text_field :name %>
+        <%= f.label "Agency" %>
+        <%= f.text_field :agency %>
+        <%= f.label "Status" %>
+        <%= f.select :status, [["accepted", "accepted"], ["denied", "denied"], ["filed", "filed"]] %>
+        <%= f.label "Deadline" %>
+        <%= f.date_field :deadline %>
+        <br>
+        Documents:
+        <%= f.fields_for :permit_documents do |document_form| %>
+          <div class="max-w-xs rounded overflow-hidden shadow-lg bg-gray-300 mt-2 pl-2">
+            <p class = "font-sans"> Name:<%= document_form.object.document.blob.filename %> </p>
+            <p class = "font-sans"> Format: <%= document_form.object.document.blob.content_type %> </p>
+            <%= document_form.file_field :document %>
+            <p class = "font-sans"> Delete: <%= document_form.check_box :_destroy %> </p>
+          </div>
+        <% end %>
+        <br>
+        <%= f.submit 'Update', class: "mt-2" %>
+      <% end %>
+    </div>
+  </div>
+</div>
