--- a/app/views/shared/_show_permit.erb
+++ b/app/views/shared/_show_permit.erb
@@ -5,6 +5,6 @@ Deadline: <%= @permit.deadline %>
 Status: <%= @permit.status %>
 Documents:
 <% @permit.permit_documents.map(&:document).map do |document| %>
-  <%= image_tag url_for(document) %>
+  <%= unless document.attachment.nil? then image_tag url_for(document) end %>
 <% end %>
 <%= link_to 'Back to all permits', permits_path, class: "block p-5" %>
