--- a/app/views/permit_submissions/index.html.erb
+++ b/app/views/permit_submissions/index.html.erb
@@ -22,7 +22,9 @@
       <div class="Table-row">
           <%= render 'shared/permit_row', permit: permit %>
           <div class="Table-cell"><%= link_to 'Show documents', permit_submission_path(id: permit.id) %></div>
-          <div class="Table-cell"><%= link_to "Edit permit", permit_edit_url(id: permit.id) %></div>
+          <% if permit.user.id == current_user.id %>
+            <div class="Table-cell"><%= link_to "Edit permit", permit_edit_url(id: permit.id) %></div>
+          <% end %>
       </div>
     <% end %>
   </div>
