--- a/app/views/shared/_show_permit.html.erb
+++ b/app/views/shared/_show_permit.html.erb
@@ -1,23 +1,41 @@
-<h1>Permit</h1>
-<div class="flex">
-  <div class = "w-1/4">
-    <b>Name</b><br>
-    <%= @permit.name %>
+<h1 class="mb-2"><%= @permit.name %></h1>
+<div class="flex mb-1 -mx-2">
+  <div class = "w-1/4 px-2"><b>Type</b><br></div>
+  <div class = "w-1/4 px-2"><b>Agency</b><br></div>
+  <div class = "w-1/4 px-2"><b>Status</b><br></div>
+  <div class = "w-1/4 px-2"><b>Deadline</b><br></div>
+</div>
+<div class="flex mb-4 -mx-2">
+  <div class = "w-1/4 px-2">
+    <%= @permit.permit_type.name %>
   </div>
-  <div class = "w-1/4">
-    <b>Agency</b><br>
+  <div class = "w-1/4 px-2">
     <%= @permit.agency %>
   </div>
-  <div class = "w-1/4">
-    <b>Deadline</b><br>
-    <%= @permit.deadline %>
-  </div>
-  <div class = "w-1/4">
-    <b>Status</b><br>
+  <div class = "w-1/4 px-2">
     <%= @permit.status %>
   </div>
+  <div class = "w-1/4 px-2">
+    <%= @permit.deadline %>
+  </div>
 </div>
-<div class = "flex">
+<div class="flex mb-1 -mx-2">
+  <div class = "w-1/4 px-2"><b>Permittee</b><br></div>
+  <div class = "w-1/4 px-2"><b>Equipment</b><br></div>
+  <div class = "w-1/4 px-2"><b>Location</b><br></div>
+</div>
+<div class="flex mb-4 -mx-2">
+  <div class = "w-1/4 px-2">
+    <%= @permit.permittee %>
+  </div>
+  <div class = "w-1/4 px-2">
+    <%= @permit.equipment %>
+  </div>
+  <div class = "w-1/4 px-2">
+    <%= @permit.location %>
+  </div>
+</div>
+<div class = "flex mb-4">
   <div class = "w-full">
     <b>Documents:</b><br>
     <% @permit.permit_documents.map(&:document).map do |document| %>
@@ -25,4 +43,4 @@
     <% end %>
   </div>
 </div>
-<%= link_to 'Back to all permits', permits_path, class: "block p-2" %>
+<%= link_to 'Back to all permits', permits_path, class: "block" %>
