--- a/app/views/permit_submissions/edit.html.erb
+++ b/app/views/permit_submissions/edit.html.erb
@@ -32,7 +32,7 @@
       <%= f.text_field :agency %>
     </div>
     <div class = "w-1/4 px-2">
-      <%= f.select :status, options_for_select(PermitSubmission.statuses.map{|k,v| [k.humanize, k]}), id: :status %>
+      <%= f.select :status, options_for_select(PermitSubmission.statuses.map{|k,v| [v.humanize, k]}) %>
     </div>
   </div>
   <div class="flex mb-2 -mx-2">
