--- a/app/views/permit_submissions/new.html.erb
+++ b/app/views/permit_submissions/new.html.erb
@@ -18,7 +18,7 @@
       <%= f.text_field :agency %>
     </div>
     <div class = "w-1/4 px-2">
-      <%= f.select :status, options_for_select(PermitSubmission.statuses.map {|s, v| [s, s] }) %>
+      <%= f.select :status, options_for_select(PermitSubmission.statuses.map{|k,v| [v.humanize, k]}) %>
     </div>
   </div>
   <div class="flex mb-2 -mx-2">
