--- a/app/views/shared/_show_permit.html.erb
+++ b/app/views/shared/_show_permit.html.erb
@@ -13,7 +13,7 @@
     <%= @permit.agency %>
   </div>
   <div class = "w-1/4 px-2">
-    <%= PermitSubmission.statuses[@permit.status].humanize %>
+    <%= PermitSubmission.statuses[@permit.status].humanize if @permit.status %>
   </div>
   <div class = "w-1/4 px-2">
     <%= @permit.deadline %>
@@ -23,6 +23,7 @@
   <div class = "w-1/4 px-2"><b>Permittee</b><br></div>
   <div class = "w-1/4 px-2"><b>Equipment</b><br></div>
   <div class = "w-1/4 px-2"><b>Location</b><br></div>
+  <div class = "w-1/4 px-2"></div>
 </div>
 <div class="flex mb-4 -mx-2">
   <div class = "w-1/4 px-2">
@@ -34,6 +35,7 @@
   <div class = "w-1/4 px-2">
     <%= @permit.location %>
   </div>
+  <div class = "w-1/4 px-2"></div>
 </div>
 <div class = "flex mb-4">
   <div class = "w-full">
