Getting rid of anything admin related

--- a/app/views/permit_submissions/index.html.erb
+++ b/app/views/permit_submissions/index.html.erb
@@ -22,7 +22,7 @@
       <div class="Table-row">
           <%= render 'shared/permit_row', permit: permit %>
           <div class="Table-cell"><%= link_to 'Show documents', permit_submission_path(id: permit.id) %></div>
-          <% if permit.user.id == current_user.id %>
+          <% if permit.user.id == current_user.id || current_user.role == 'manager' %>
             <div class="Table-cell"><%= link_to "Edit permit", permit_edit_url(id: permit.id) %></div>
           <% end %>
       </div>
