--- a/app/views/permit_submissions/edit.html.erb
+++ b/app/views/permit_submissions/edit.html.erb
@@ -55,6 +55,14 @@
       <%= f.text_field :location %>
     </div>
   </div>
+	<div class="flex mb-2 -mx-2">
+    <%= f.label "Tags", class: "w-1/4 px-2" %>
+	</div>
+	<div class="flex mb-4 -mx-2">
+    <div class = "w-1/4 px-2">
+			<%= f.text_field :tag_list, value: f.object.tag_list.join(",") %>
+    </div>
+	</div>
 	<% if current_user.manager? %>
 		<div class="flex mb-2 -mx-2">
 	    <%= f.label "Assigned User", class: "w-1/4 px-2" %>
