--- a/app/views/shared/_show_permit.html.erb
+++ b/app/views/shared/_show_permit.html.erb
@@ -23,7 +23,7 @@
   <div class = "w-1/4 px-2"><b>Permittee</b><br></div>
   <div class = "w-1/4 px-2"><b>Equipment</b><br></div>
   <div class = "w-1/4 px-2"><b>Location</b><br></div>
-  <div class = "w-1/4 px-2"></div>
+  <div class = "w-1/4 px-2"><b>Tags</b><br></div>
 </div>
 <div class="flex mb-4 -mx-2">
   <div class = "w-1/4 px-2">
@@ -35,7 +35,9 @@
   <div class = "w-1/4 px-2">
     <%= @permit.location %>
   </div>
-  <div class = "w-1/4 px-2"></div>
+  <div class = "w-1/4 px-2">
+    <%= @permit.tag_list %>
+  </div>
 </div>
 <div class = "flex mb-4">
   <div class = "w-full">
