Changing user assignment so admins can only assign users on their team

--- a/app/views/permit_submissions/new.html.erb
+++ b/app/views/permit_submissions/new.html.erb
@@ -55,7 +55,7 @@
 	  </div>
 		<div class="flex mb-4 -mx-2">
 	    <div class = "w-1/4 px-2">
-	      <%= f.select :user_id, User.all.collect{|u| ["#{u.first_name} #{u.last_name}", u.id]} %>
+	      <%= f.select :user_id, current_user.team.users.collect{|u| ["#{u.first_name} #{u.last_name}", u.id]} %>
 	    </div>
 	  </div>
 	<% else %>
