--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
           <div class="Dropdown x-bg-blue h-8">
             <h3>Dashboard</h3>
             <ul class="Dropdown-list">
-              <li class="Dropdown-listItem"><%= link_to "Permits", permits_path(sort_by: 'name') %></li>
+              <li class="Dropdown-listItem"><%= link_to "Permits", permits_path(sort_by: 'created_at') %></li>
               <li class="Dropdown-listItem"><%= link_to "Something Else", permits_path(sort_by: 'name') %></li>
               <li class="Dropdown-listItem"><%= link_to "Alerts", alerts_path %></li>
             </ul>
